# projeto_cpi_economy

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
datasets/: dataset_com_idh.csv  dataset_completo_final.csv  dataset_dashboard.csv  master_dataset.csv  world_bank_cleaned.csv  world_bank_raw.csv
notebooks/: 01-coleta_worldbank.ipynb
